# milp-logic

./: CMakeLists.txt  MilpSolver.sln  ProjectHome.md  README.txt  boost.cmake  redoCmx.sh  showDirTree.bat  showDirTree.sh  tree.pl  win_tree.pl
doc/: Doxyfile  README.txt  run.bat  run.sh
libAnalytics/: CMakeLists.txt
libAnalytics/include/: BiExponentialConvolution.h  DataVectorCorrelator.h  Exponential.h  ExponentialFitter.h  Histogram.h  NewtonRaphsonsMethod.h  libAnalyticsDefinitions.h
libAnalytics/src/: BiExponentialConvolution.cpp  DataVectorCorrelator.cpp  Exponential.cpp  ExponentialFitter.cpp  Histogram.cpp  NewtonRaphsonsMethod.cpp
libAnalyticsTest/: CMakeLists.txt
libAnalyticsTest/src/: libAnalyticsTest.cpp
libMilpLogic/: CMakeLists.txt
libMilpLogic/include/: BclException.h  CplexExpression.h  CplexSolver.h  GurobiSolver.h  HasSolver.h  Solver.h  XpressSolver.h
libMilpLogic/src/: CplexSolver.cpp  GurobiSolver.cpp  Solver.cpp  XpressSolver.cpp
libMilpLogically/: CMakeLists.txt
libMilpLogically/include/: GurobiSolver.h  HasSolver.h  MaxThreads.h  MinimumCalculator.h  NUnits.h  PwlApproximator.h  XpressSolver.h
libMilpLogically/src/: BclException.cpp  BreakPointCalculator.cpp  CplexSolver.cpp  MinimumCalculator.cpp  Solver.cpp  XpressSolver.cpp
libMilpSolver/: CMakeLists.txt  libMilpSolver.vcproj
libMilpSolver/include/: BreakPointCalculator.h  CplexExpression.h  CplexSolver.h  DoOpenMP.h  GurobiSolver.h  HasSolver.h  LinearApproximator.h  MinimumCalculator.h  MyColors.h  NUnits.h  PwlApproximator.h  ScheduleSvg.h  Solver.h  Step.h  StringUtilities.h  Svg.h  XpressSolver.h
libMilpSolver/src/: BreakPointCalculator.cpp  CplexExpression.cpp  CplexSolver.cpp  GurobiSolver.cpp  LinearApproximator.cpp  MinimumCalculator.cpp  PwlApproximator.cpp  ScheduleSvg.cpp  Scroll.js  Solver.cpp  StringUtilities.cpp  Svg.cpp  XpressSolver.cpp
libStringUtilities/: CMakeLists.txt
libStringUtilities/include/: MyColors.h  StringUtilities.h
libStringUtilities/src/: MyColors.cpp  StringUtilities.cpp
milpLogicSortingNetworkOptimizer/: CMakeLists.txt  README.txt  run.bat  run.sh
milpLogicSortingNetworkOptimizer/src/: milpLogicSortingNetworkOptimizer.cpp
milpLogicTest/: CMakeLists.txt  run.bat  run.sh
milpLogicTest/src/: milpLogicTest.cpp
milpLogicallySortingNetworkOptimizer/: CMakeLists.txt  run.sh
milpLogicallyTest/: CMakeLists.txt  run.sh
milpLogicallyTest/src/: milpLogicallyTest.cpp
milpSolverTest/: CMakeLists.txt  milpSolverTest.vcproj
milpSolverTest/src/: milpSolverTest.cpp
